# polyws

./: .gitignore  .polyws  CONTRIBUTING.md  Cargo.toml  install.sh  readme.md  uninstall.sh
.github/workflows/: ci.yml
docs/: README.md  dev-guide.md  user-guide.md
src/: cli.rs  config.rs  doctor.rs  exec.rs  git.rs  main.rs  snapshot.rs  sync.rs  tui.rs  update.rs  utils.rs  workspace.rs
src/tui/: app.rs  helpers.rs  input.rs  mod.rs  render.rs  types.rs
src/vm/: detect_os.rs  executor.rs  installer.rs  mod.rs  ssh.rs
website/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
website/public/: 404.html  CNAME
website/public/generet/: index.html
website/src/: App.jsx  CommandsSection.jsx  ConfigSection.jsx  FeaturesSection.jsx  Footer.jsx  HowSection.jsx  InstallSection.jsx  Navbar.jsx  TuiSection.jsx  globals.css  main.jsx
website/src/routes/: ChangelogPage.jsx  DocsPage.jsx  GeneratorPage.jsx
